Избавился от gowork, теперь libs как независимая библиотека, доработан gateway, от части работает правильно, все обернуто в докер
