# backend/skins/internal/transport/http/handler/update.go
@@ -19,7 +19,7 @@ import (
 // @Success      400  {object}  dto.ErrorResponse
 // @Success      401  {object}  dto.ErrorResponse
 // @Success      500  {object}  dto.ErrorResponse
-// @Router       / [put]
+// @Router       /api/skins/ [put]
 func (h *SkinHandler) Update(ctx fiber.Ctx) error {
 	formFile, err := ctx.FormFile(FORM_FILE_NAME)
 	if err != nil {
